# IE4483-miniproject

./: .gitignore  README.md  pyproject.toml  sentiment.ipynb  submission.csv
