[project]
name = "ie4483-miniproject"
version = "0.1.0"
description = ""
authors = [
    {name = "joshjms",email = "joshjms1607@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "numpy (>=2.3.4,<3.0.0)",
    "pandas (>=2.3.3,<3.0.0)",
    "tensorflow (>=2.20.0,<3.0.0)",
    "matplotlib (>=3.10.7,<4.0.0)",
    "scikit-learn (>=1.7.2,<2.0.0)",
    "nltk (>=3.9.2,<4.0.0)",
    "wordcloud (>=1.9.4,<2.0.0)",
    "keras (>=3.12.0,<4.0.0)",
    "transformers (>=4.57.1,<5.0.0)",
    "tf-keras (>=2.20.1,<3.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false
